home page styling

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="sectionsSection">
-                <div class="section">
+                <div class="section lifestyleSection">
                     <img src="./Photos/Lifestyle.png" alt="" class='lifestyle'>
                     <div class="subSections">
                         <div class="subSection">
@@ -114,7 +114,7 @@
                     </div>
                     <img src="./Photos/LifestyleFull.png" alt="" class='lifestylefull'>
                 </div>
-                <div class="section">
+                <div class="section recipiesSection">
                     <img src="./Photos/Recipies.png" class="recipies">
                     <div class="subSections">
                         <div class="subSection">
@@ -133,6 +133,7 @@
                             <h4>SNACKS</h4>
                         </div>
                     </div>
+                    <img src="./Photos/recipiesfull.png" class="recipiefull">
                 </div>
             </div>
             <div class="favBrands">
