home page media queries

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
 
         <ul class='navlinks'>
-            <li>Lifestyle</li>
-            <li>Fashion</li>
-            <li>Recipies</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="#">Lifestyle</a></li>
+            <li><a href="#">Fashion</a></li>
+            <li><a href="#">Recipies</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <div class="homepage">
