--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <img src="./Photos/Logo.png" alt="Vienna Jane">
+        <a href="/"><img src="./Photos/Logo.png" alt="Vienna Jane"></a>
         <div class="burger">
             <i class="fas fa-bars"></i>
         </div>
@@ -82,7 +82,7 @@
                 <img src="./Photos/BlogFull.png" alt="" class="blogfull">
             </div>
             <div class="subscribeSection">
-                <img src="./Photos/squiggleselected.png" alt="" class="subscribeSquiggle">
+                <img src="./Photos/squigglesub.svg" alt="" class="subscribeSquiggle">
                 <div class="subscribePhotoSection">
                     <div class="subscribeBox"></div>
                     <img src="./Photos/Wood.jpeg" alt="" class='subscribePhoto'>
