--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="./Photos/BlogFull.png" alt="" class="blogfull">
+                <img src="./Photos/Blogfull.png" alt="" class="blogfull">
             </div>
             <div class="subscribeSection">
                 <img src="./Photos/squigglesub.svg" alt="" class="subscribeSquiggle">
