--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     </nav>
     <div class="homepage">
         <div class="hero">
-            <img src="./Photos/small.png" class='small'>
+            <img src="./Photos/wallFull.jpg" alt="" class='test'>
+            <!-- <img src="./Photos/small.png" class='small'>
             <img src="./Photos/HeaderMedium.png" class='medium'>
-            <img src="./Photos/HeaderExtraLarge.png" class='large'>
+            <img src="./Photos/HeaderExtraLarge.png" class='large'> -->
         </div>
         <div class="about">
             <div class="aboutbox"></div>
@@ -90,8 +91,11 @@
                 <div class="subscribeContent">
                     <img src="./Photos/Subscribe.png" alt="">
                     <p>GET AN EMAIL WHEN I POST!</p>
-                    <input type="text">
-                    <button type="submit">SUBMIT</button>
+                    <form>
+                        <input type="text">
+                        <button type="submit">SUBMIT</button>
+                    </form>
+                    
                 </div>
             </div>
             <div class="sectionsSection">
