--- a/index.html
+++ b/index.html
@@ -18,19 +18,16 @@
         </div>
 
         <ul class='navlinks'>
-            <li><a href="#">Lifestyle</a></li>
-            <li><a href="#">Fashion</a></li>
-            <li><a href="#">Recipies</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/lifestyle.html">Lifestyle</a></li>
+            <li><a href="/fashion.html">Fashion</a></li>
+            <li><a href="/recipes.html">Recipes</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="homepage">
         <div class="hero">
-            <img src="./Photos/wallFull.jpg" alt="" class='test'>
-            <!-- <img src="./Photos/small.png" class='small'>
-            <img src="./Photos/HeaderMedium.png" class='medium'>
-            <img src="./Photos/HeaderExtraLarge.png" class='large'> -->
+            <img src="./Photos/HomeLarge.png" class='test'>
         </div>
         <div class="about">
             <div class="aboutbox"></div>
@@ -121,7 +118,7 @@
                     <img src="./Photos/LifestyleFull.png" alt="" class='lifestylefull'>
                 </div>
                 <div class="section recipiesSection">
-                    <img src="./Photos/Recipies.png" class="recipies">
+                    <img src="./Photos/Recipes.png" class="recipies">
                     <div class="subSections">
                         <div class="subSection">
                             <div class="postbox"></div>
@@ -139,7 +136,7 @@
                             <h4>SNACKS</h4>
                         </div>
                     </div>
-                    <img src="./Photos/recipiesfull.png" class="recipiefull">
+                    <img src="./Photos/recipesfull.png" class="recipiefull">
                 </div>
             </div>
             <div class="favBrands">
