categories pages complete

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     </nav>
     <div class="homepage">
         <div class="hero">
-            <img src="./Photos/HomeLarge.png" class='test'>
+            <img src="/Photos/HomeLarge.png" class='test'>
         </div>
         <div class="about">
             <div class="aboutbox"></div>
             <div class="imageabout">
-                <img src="./Photos/AboutMedium.png" alt="">
+                <img src="./Photos/AboutMedium.png" alt="Vienna about me">
             </div>
             <div class="aboutcontent">
-                <img src="./Photos/Oh hey!.png" alt="">
+                <img src="./Photos/Oh hey!.png" alt="Vienna about me">
                 <h3>I'M VIENNA</h3>
                 <p>Born and raised in Lower Mainland BC. <br>
                     Your gal is 5’2 and has been a fashionista at heart since the age of 7. <br>
