--- a/lifestyle.html
+++ b/lifestyle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vienna Jane | Lifestyle</title>
-    <link rel="stylesheet" href="./lifestyle.css">
+    <link rel="stylesheet" href="./Categories.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,9 +25,9 @@
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <div class="lifestylePage">
-        <div class="lifestyleHero">
-            <img src="./Photos/sitting.png">
+    <div class="Page">
+        <div class="Hero">
+            <img src="./Photos/sitting.png" class="lifestyleHero">
             <h2>LIFESTYLE</h2>
         </div>
         <div class="posts">
