--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
 
         <ul class='navlinks'>
-            <li><a href="/lifestyle.html">Lifestyle</a></li>
-            <li><a href="/fashion.html">Fashion</a></li>
-            <li><a href="/recipes.html">Recipes</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="lifestyle.html">Lifestyle</a></li>
+            <li><a href="fashion.html">Fashion</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <div class="homepage">
