--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="homepage">
         <div class="hero">
-            <img src="./Photos/HomeLarge.png" class='test'>
+            <img src="./Photos/ViennaHomeImage.jpg" class='test'>
         </div>
         <div class="about">
             <div class="aboutbox"></div>
