--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vienna Jane | About</title>
-    <link rel="stylesheet" href="./fashion.css">
+    <link rel="stylesheet" href="./about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -18,13 +18,57 @@
         </div>
 
         <ul class='navlinks'>
-            <li><a href="/lifestyle.html">Lifestyle</a></li>
-            <li><a href="/fashion.html">Fashion</a></li>
-            <li><a href="/recipes.html">Recipes</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="lifestyle.html">Lifestyle</a></li>
+            <li><a href="fashion.html">Fashion</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <div class="aboutPage">
+        <div class="aboutHero">
+            <img src="./Photos/holidaydress.jpg" alt="About me hero image">
+            <h2>ABOUT ME</h2>
+        </div>
+        <div class="aboutSection">
+            <div class="section">
+                <div class="aboutContent">
+                    <img src="./Photos/Oh hey!.png" alt="Oh hey">
+                    <h3>I AM VIENNA!</h3>
+                    <p>Born and raised in Lower Mainland BC. <br>
+                        Your gal is 5’2 and has been a fashionista at heart since the age of 7. <br>
+                        Blogging helps me share with others my passions, experiences, as well as how Jesus is working through me! <br>
+                        <br>XOXO VIENNA
+                    </p>
+                </div>
+                <div class="photo">
+                    <img src="./Photos/Coffee.jpg">
+                    <div class="imageBox"></div>
+                </div>
+            </div>
+            <div class="second">
+                <div class="faq">
+                    <h3>FAQ</h3>
+                    <p><span>HOW LONG HAVE YOU BEEN BLOGGING?</span> <br>
+                        -Going on 6 years now... wow that is crazy to think about. I was in 9th grade!
+                        <br><br>
+                        <span>HOW OLD ARE YOU?</span><br>
+                        -20 years old and not ready to grow up!
+                        <br><br>
+                        <span>ARE YOU IN SCHOOL / WHAT DO YOU STUDY?</span><br>
+                        -I studied biblical studies abroad in Germany for a year and now I am at my local university studying Kinesiology!
+                        <br><br>
+                        <span>HOW DO YOU TRAVEL ALL THE TIME?</span><br>
+                        -My parents have the travel bug and they love going on vacation and taking the fam with them. I also am always saving up for future vacations!
+                        </p>
+                </div>
+                <div class="photo">
+                    <img src="./Photos/smile.jpg" class='smile'>
+                    <div class="imageBox"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <img src="./Photos/wave.png" class="wave">
     <footer>
